# fastapi_file_server

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  alembic_scripting.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 55524f9d230c_initial.py
app/: api_admin.py  main.py
app/api/: __init__.py  config_error.py  routes.py
app/api/utils/: do_file.py  elastic.py
app/api/v1/: auth.py  file.py  folder.py  home.py  pages.py  user.py
app/commands/: user.py
app/config/: settings.py
app/database/: db.py
app/file_processors/: archive_processor.py  audio_processor.py  base_processor.py  code_processor.py  excel_processor.py  image_processor.py  main_file.py  pdf_processor.py  presentation_processor.py  text_processor.py  video_processor.py  word_processor.py
app/file_processors/utils/: file_helpers.py  logger.py
app/managers/: archive.py  auth.py  sessions.py  user.py
app/models/: __init__.py  enums.py  user.py
app/schemas/: base.py
app/schemas/request/: ffiles.py  user.py
app/schemas/response/: ffiles.py  user.py
app/static/assets/js/: chart-widget.js  login.js
app/templates/: 403.html  404.html  500.html  base.html  index.html
app/templates/auth/: login.html
app/templates/file_manager/: files.html
app/templates/include/: navbar.html  sidebar.html
app/templates/user/: users.html
tests/ffiles/: download_file.py
