[project]
name = "fast-api-file-server"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "Your Name", email = "you@example.com" }  # ✅ Correct format
]
[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
