[project]
name = "fast_api_file_server"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Yurii", email = "you@example.com" }  # Correct format
]
packages = [{ include = "fast_api_file_server" }]
[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"